src/test/deca/context/invalid/wobj/test_not_int.deca
// Description:
//    operation not fail
//
// Resultats:
//    ligne 11 : Le type attendu apres not est boolean
//
// Historique:
//    cree le 01/01/2024

{
   int state = 1;
   boolean state1 = !state;
}
